--- a/index.html
+++ b/index.html
@@ -51,3 +51,15 @@
 </body>
 
 </html>
+
+<head>
+    <!-- Código omitido -->
+
+    <title>Edualuraflix</title>
+</head>
+
+<body>
+    <header>EDUALURAFLIX</header>
+
+    <!-- Código omitido -->
+</body>
